--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   main:
-    runs-on: ubuntu-latest
+    runs-on: buildjet-4vcpu-ubuntu-2004
     steps:
       - uses: amannn/action-semantic-pull-request@v4.5.0
         env:
