--- a/.github/workflows/release-sims.yml
+++ b/.github/workflows/release-sims.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test-sim-multi-seed-long:
-    runs-on: ubuntu-latest
+    runs-on: buildjet-4vcpu-ubuntu-2004
     if: "!contains(github.event.head_commit.message, 'skip-sims')"
     timeout-minutes: 60
     steps:
